2002-11-07  Richard Williamson  <rjw@apple.com>

        * ChangeLog:
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer convertCharacters:length:toGlyphs:skipControlCharacters:]):
        (-[WebTextRenderer _floatWidthForCharacters:stringLength:fromCharacterPosition:numberOfCharacters:withPadding:applyRounding:attemptFontSubstitution:widths:fonts:glyphs:numGlyphs:]):

2002-11-07  Richard Williamson  <rjw@apple.com>

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer convertCharacters:length:toGlyphs:skipControlCharacters:]):
        (-[WebTextRenderer _floatWidthForCharacters:stringLength:fromCharacterPosition:numberOfCharacters:withPadding:applyRounding:attemptFontSubstitution:widths:fonts:glyphs:numGlyphs:]):

=== Alexander-31 ===

2002-11-07  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3094778 - REGRESSION: Assert on logout from schwab.com

	(probably fixed it anyway - I'm flying blind on this one)
	
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge createWindowWithURL:frameName:]): Use a nil request
	if the URL was nil, instead of making a request that contains a
	nil URL.

2002-11-07  Maciej Stachowiak  <mjs@apple.com>

	Changed things so that creating a window takes a request rather
	than a URL and referrer.
	
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge createWindowWithURL:frameName:]):
        * WebView.subproj/WebControllerPrivate.h:
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _openNewWindowWithRequest:behind:]):
        * WebView.subproj/WebDataSourcePrivate.h:
        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSourcePrivate dealloc]):
        (-[WebDataSource _setTriggeringEvent:]):
        (-[WebDataSource _triggeringEvent]):
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultContextMenuDelegate openNewWindowWithURL:]):
        * WebView.subproj/WebFrame.m: